--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
 
 
               <div class="p-3">
-                <a href="./home.html" class="btn btn-outline-primary btn-block">Login</a>
+                <a href="/home" class="btn btn-outline-primary btn-block">Login</a>
               </div>
 
 
@@ -83,7 +83,7 @@
               </div>
 
               <div class="mt-4 p-2 border text-center">
-                <p class="m-0">Dont't Have Account? <a href="./signup.html">Sign up</a></p>
+                <p class="m-0">Dont't Have Account? <a href="/signup">Sign up</a></p>
               </div>
 
 
