--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,10 +11,10 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- styles -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <!--font-aweseme-->
-    <link href="./fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
+    <link href="/stylesheets/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
     <title>Home</title>
 </head>
 
@@ -34,7 +34,7 @@
                     <h5 class=" mt-3">USER NAME</h5>
                     <p class="bio mt-2">user bio</p>
 
-                    <a href="./profile.html" class="show-profile">View Full Profile</a>
+                    <a href="/profile" class="show-profile">View Full Profile</a>
                 </div>
 
             </div>
@@ -79,16 +79,16 @@
 
                             <div class="row justify-content-center mb-3">
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/post1.jpg">
+                                    <img class="img-post" src="/images/post1.jpg">
                                 </div>
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/post2.jpg">
+                                    <img class="img-post" src="/images/post2.jpg">
                                 </div>
 
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/post3.jpg">
+                                    <img class="img-post" src="/images/post3.jpg">
                                 </div>
                             </div>
 
@@ -123,16 +123,16 @@
 
                             <div class="row justify-content-center mb-3">
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/post1.jpg">
+                                    <img class="img-post" src="/images/post1.jpg">
                                 </div>
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/post2.jpg">
+                                    <img class="img-post" src="/images/post2.jpg">
                                 </div>
 
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/post3.jpg">
+                                    <img class="img-post" src="/images/post3.jpg">
                                 </div>
                             </div>
 
@@ -222,16 +222,16 @@
 
                             <div class="row justify-content-center mb-3">
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/story1.jpg">
+                                    <img class="img-post" src="/images/story1.jpg">
                                 </div>
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/story2.jpeg">
+                                    <img class="img-post" src="/images/story2.jpeg">
                                 </div>
 
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/story3.jpg">
+                                    <img class="img-post" src="/images/story3.jpg">
                                 </div>
                             </div>
 
@@ -266,16 +266,16 @@
 
                             <div class="row justify-content-center mb-3">
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/story1.jpg">
+                                    <img class="img-post" src="/images/story1.jpg">
                                 </div>
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/story2.jpeg">
+                                    <img class="img-post" src="/images/story2.jpeg">
                                 </div>
 
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/story3.jpg">
+                                    <img class="img-post" src="/images/story3.jpg">
                                 </div>
                             </div>
 
@@ -310,16 +310,16 @@
 
                             <div class="row justify-content-center mb-3">
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/story1.jpg">
+                                    <img class="img-post" src="/images/story1.jpg">
                                 </div>
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/story2.jpeg">
+                                    <img class="img-post" src="/images/story2.jpeg">
                                 </div>
 
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/story3.jpg">
+                                    <img class="img-post" src="/images/story3.jpg">
                                 </div>
                             </div>
 
@@ -374,16 +374,16 @@
                         </div>
                         <div class="row justify-content-center mb-3">
                             <div class="col-4 center mb-2 p-2">
-                                <img class="img-post-modal" src="./assets/placeholder.png">
+                                <img class="img-post-modal" src="/images/placeholder.png">
                             </div>
 
                             <div class="col-4 center mb-2 p-2">
-                                <img class="img-post-modal" src="./assets/placeholder.png">
+                                <img class="img-post-modal" src="/images/placeholder.png">
                             </div>
 
 
                             <div class="col-4 center mb-2 p-2">
-                                <img class="img-post-modal" src="./assets/placeholder.png">
+                                <img class="img-post-modal" src="/images/placeholder.png">
                             </div>
                         </div>
                     </div>
