--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,10 +11,10 @@
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- styles -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <!--font-aweseme-->
-    <link href="./fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
+    <link href="/stylesheets/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
     <title>profile</title>
 </head>
 
