--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- styles -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <!--font-aweseme-->
-    <link href="./fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
+    <link href="/stylesheets/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
     <title>Signup</title>
 </head>
 <body>
@@ -47,11 +47,11 @@
                         </div>
 
                         <div class="p-3">
-                            <a href="./home.html" class="btn btn-outline-primary btn-block">create an account</a>
+                            <a href="./home" class="btn btn-outline-primary btn-block">create an account</a>
                         </div>
 
                         <p class="mt-4">
-                            Already have an account ? <a href="./index.html">Login</a>
+                            Already have an account ? <a href="./index">Login</a>
                         </p>
 
 
