--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,6 +13,7 @@
 
     <!--font-aweseme-->
     <link href="/stylesheets/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
+    <script src="/javascripts/signup.js"></script>
     <title>Signup</title>
 </head>
 <body>
@@ -25,29 +26,29 @@
                 <div class="card p-4">
                     <h3 class="text-center mb-3">Create Your Account</h3>
 
-                    <form >
+                    <form action="signupSubmit" method="POST">
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Email Address" >
+                            <input type="email" name="address" id="address" class="form-control" placeholder="Email Address" >
                         </div>
 
 
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Username" >
+                            <input type="text" name="username" id="username" class="form-control" placeholder="Username" >
                         </div>
 
 
 
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Password" >
+                            <input type="password" name="password1" id="password1" class="form-control" placeholder="Password" >
                         </div>
 
 
                         <div class="form-group">
-                            <input type="password" class="form-control" placeholder="Password Again" >
+                            <input type="password" name="password2" id="password2" class="form-control" placeholder="Password Again" >
                         </div>
 
                         <div class="p-3">
-                            <a href="./home" class="btn btn-outline-primary btn-block">create an account</a>
+                            <input type="submit" value="Create an account" class="btn btn-outline-primary btn-block">
                         </div>
 
                         <p class="mt-4">
