--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -26,29 +26,29 @@
                 <div class="card p-4">
                     <h3 class="text-center mb-3">Create Your Account</h3>
 
-                    <form action="signupSubmit" method="POST">
+                    <form id="signupForm" action="signupSubmit" method="POST">
                         <div class="form-group">
-                            <input type="email" name="address" id="address" class="form-control" placeholder="Email Address" >
+                            <input type="email" name="address" id="address" required="true" class="form-control" placeholder="Email Address" >
                         </div>
 
 
                         <div class="form-group">
-                            <input type="text" name="username" id="username" class="form-control" placeholder="Username" >
+                            <input type="text" name="username" id="username" required="true" class="form-control" placeholder="Username" >
                         </div>
 
 
 
                         <div class="form-group">
-                            <input type="password" name="password1" id="password1" class="form-control" placeholder="Password" >
+                            <input type="password" name="password1" id="password1" required="true" class="form-control" placeholder="Password" >
                         </div>
 
 
                         <div class="form-group">
-                            <input type="password" name="password2" id="password2" class="form-control" placeholder="Password Again" >
+                            <input type="password" name="password2" id="password2" required="true" class="form-control" placeholder="Password Again" >
                         </div>
 
                         <div class="p-3">
-                            <input type="submit" value="Create an account" class="btn btn-outline-primary btn-block">
+                            <input type="submit" value="Create an account" onclick="return validate()" class="btn btn-outline-primary btn-block">
                         </div>
 
                         <p class="mt-4">
