--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -26,7 +26,7 @@
                 <div class="card p-4">
                     <h3 class="text-center mb-3">Create Your Account</h3>
 
-                    <form id="signupForm" onsubmit="onSubmit('/insert')">
+                    <form id="signupForm"  onsubmit="onSubmit('/insert')">
                         <div class="form-group">
                             <input type="email" name="address" id="address" required="true" class="form-control" placeholder="Email Address" >
                         </div>
@@ -39,12 +39,12 @@
 
 
                         <div class="form-group">
-                            <input type="password" name="password1" id="password1" required="true" class="form-control" placeholder="Password" >
+                            <input type="password" name="password1" id="password1" required="true" class="form-control" placeholder="Password" autocomplete="off">
                         </div>
 
 
                         <div class="form-group">
-                            <input type="password" name="password2" id="password2" required="true" class="form-control"  placeholder="Password Again" >
+                            <input type="password" name="password2" id="password2" required="true" class="form-control"  placeholder="Password Again" autocomplete="off">
                         </div>
                         <div id="results" style="margin-top:30px">1233</div>
 
@@ -72,7 +72,7 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
