--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -46,7 +46,7 @@
                         <div class="form-group">
                             <input type="password" name="password2" id="password2" required="true" class="form-control"  placeholder="Password Again" autocomplete="off">
                         </div>
-                        <div id="results" style="margin-top:30px">1233</div>
+                        <div id="results" style="margin-top:30px"></div>
 
 
 
