--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,11 +15,12 @@
 
     <!--font-aweseme-->
     <link href="/stylesheets/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
+     <script src="/javascripts/initHome.js"></script>
     <title>Home</title>
 </head>
 
 
-<body>
+<body onload='init()'>
 
 <main class="bg">
 
@@ -27,11 +28,13 @@
         <div class="row">
             <div class="col-4">
 
+
+
                 <div class="card user-data text-center d-none d-sm-block m-4 p-4">
                     <div class="center">
                         <div class="user-avatar"> </div>
                     </div>
-                    <h5 class=" mt-3">USER NAME</h5>
+                    <h5 id="username" class=" mt-3">USER NAME</h5>
                     <p class="bio mt-2">user bio</p>
 
                     <a href="/profile" class="show-profile">View Full Profile</a>
@@ -71,7 +74,6 @@
                                 <strong>username</strong>
                                 <span class="pl-3">22/2/2020 08:20 pm</span>
                             </p>
-
                             <p class="lead mb-3">
                                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                 Ipsum has been the industry's standard dummy text ever since the 1500s
