--- a/views/sockettest.ejs
+++ b/views/sockettest.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>how to use socket</title>
     <script src='/jquery/dist/jquery.min.js'></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="/socket-io/socket-io.js"></script>
 </head>
 <body>
 <form action="#">
