--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,7 +102,8 @@
                                 </div>
 
                                 <div class="col-6">
-                                    <i class="fas fa-heart text-danger"></i> (10)
+                                    <button id="button1" class="fas fa-heart text-danger"></button>
+                                    <i id="socketEvent1">10</i>
                                     <i class="far fa-grin-squint text-warning"></i> (15)
                                     <i class="far fa-sad-tear text-warning"></i> (12)
 
