--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,9 +16,9 @@
     <!--font-aweseme-->
     <link href="/stylesheets/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-     <script src="/socket.io/socket.io.js"></script>
-     <script src="/javascripts/initHome.js"></script>
-
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/javascripts/initHome.js"></script>
+    <script src="/javascripts/upload_story.js"></script>
     <title>Home</title>
 </head>
 
@@ -378,37 +378,32 @@
                             <textarea class="form-control" rows="5" placeholder="your story....."></textarea>
                         </div>
                         <div class="row justify-content-center mb-3">
-                            <div class="col-4 center mb-2 p-2">
-                                <div class="item">
-                                    <input type="file" name="file" id="file" multiple="multiple" />
-                                </div>
+                            <div class="img-box full">
+                                <section class=" img-section">
+                                    <p class="up-p">Images：<span class="up-span">You can upload up to 3 pictures(Maximum 10Mb per photo)</span></p>
+                                    <div class="z_photo upimg-div clear" >
+                                        <section class="z_file fl">
+                                            <img src="../images/imgUpload.png" class="add-img">
+                                            <input type="file" name="file" id="file" class="file" value="" unselectable="on" accept="image/jpg,image/jpeg,image/png,image/bmp" multiple />
+                                        </section>
+                                    </div>
+                                </section>
                             </div>
-                            <div class="col-4 center mb-2 p-2">
-                                <img class="img-post-modal " id="img0" src="./images/placeholder.png">
                             </div>
-
-                            <div class="col-4 center mb-2 p-2">
-                                <img class="img-post-modal" src="./images/placeholder.png">
-                            </div>
-
-
-                            <div class="col-4 center mb-2 p-2">
-                                <img class="img-post-modal" src="./images/placeholder.png">
-                            </div>
-
-
                         </div>
-
-
-
-                    </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Post</button>
                     </div>
                 </div>
             </div>
+            <aside class="mask works-mask">
+                <div class="mask-content">
+                    <p class="del-p ">Are you sure you want to delete the picture?</p>
+                    <p class="check-p"><span class="del-com wsdel-ok">Yes</span><span class="wsdel-no">No</span></p>
+                </div>
+            </aside>
+            </div>
         </div>
-
 </main>
 
 
