image part nearly finish

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -81,7 +81,7 @@
 
                             <div class="row justify-content-center mb-3">
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="/images/post1.jpg">
+                                    <img id="post1" class="img-post" src="/images/post1.jpg">
                                 </div>
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
