--- a/views/home.ejs
+++ b/views/home.ejs
@@ -85,12 +85,12 @@
                                 </div>
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="/images/post2.jpg">
+                                    <img id="post2" class="img-post" src="/images/post2.jpg">
                                 </div>
 
 
                                 <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="/images/post3.jpg">
+                                    <img id="post3" class="img-post" src="/images/post3.jpg">
                                 </div>
                             </div>
 
@@ -376,7 +376,7 @@
                     </div>
                     <div class="modal-body p-4">
                         <div class="form-group">
-                            <textarea class="form-control" rows="5" placeholder="your story....."></textarea>
+                            <textarea id="textInput" class="form-control" rows="5" placeholder="your story....."></textarea>
                         </div>
                         <div class="row justify-content-center mb-3">
                             <div class="img-box full">
