--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -16,23 +16,20 @@
     <!--font-aweseme-->
     <link href="/stylesheets/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
     <title>edit profile</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-   
-    <script src="/javascripts/edit.js"></script>
 </head>
 
-<body class="bg" onload="initedit()">
+<body class="bg">
 
 <div class="container" style="margin-top: 9%;">
     <!--buttons-->
-    <a href="./profile" class="btn btn-outline-primary fixed-left">
+    <a href="./profile.html" class="btn btn-outline-primary fixed-left">
         cancel
     </a>
 
 
-    <button onclick="save()" class="btn btn-outline-primary fixed-right">
+    <a href="./profile.html" class="btn btn-outline-primary fixed-right">
         save
-    </button>
+    </a>
 
     <!-- profile data-->
     <div class="center">
@@ -40,53 +37,39 @@
     </div>
 
     <div class="text-center">
-        <h6 class=" mt-3 text-white" id="created"></h6>
-        <!-- <p class="bio mt-2 text-white">user bio</p> -->
+        <h6 class=" mt-3 text-white">member since March 2020</h6>
+        <p class="bio mt-2 text-white">user bio</p>
     </div>
 
     <div class="row justify-content-center">
         <div class="col-sm-7 col-md-4">
             <div class="row">
-
-                <form id="signupForm"  onsubmit="onSubmit()">
-                    <div class="alert alert-success" id="results" style="display: none;">
-                        
+                <div class="col-12">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Name : Username">
                     </div>
-                    <div class="col-12">
-                        <div class="form-group">
-                            <input type="text" name="username" id="username" class="form-control" placeholder="Name : Username">
-                        </div>
+                </div>
+
+
+                <div class="col-12 ">
+                    <div class="form-group">
+                        <textarea rows="4" placeholder="bio....." class="form-control"></textarea>
                     </div>
+                </div>
 
 
-                    <div class="col-12 ">
-                        <div class="form-group">
-                            <textarea rows="4" name="bio" id="bio" placeholder="bio....." class="form-control"></textarea>
-                        </div>
+                <div class="col-12 ">
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Email : User Email">
                     </div>
+                </div>
 
 
-                    <div class="col-12 ">
-                        <div class="form-group">
-                            <input type="email" name="email_address" id="email_address"  class="form-control" placeholder="Email : User Email">
-                        </div>
+                <div class="col-12 ">
+                    <div class="form-group">
+                        <input type="password" class="form-control" placeholder="Password : User Password">
                     </div>
-
-
-                    <div class="col-12 ">
-                        <div class="form-group">
-                            <input type="password" name="password" id="password"  class="form-control" placeholder="Password : User Password">
-                        </div>
-                    </div>
-
-
-                    <div class="p-3">
-                        <input type="submit" value="Update"  class="btn btn-outline-primary btn-block">
-                    </div>
-
-
-
-                </form>
+                </div>
             </div>
         </div>
 
@@ -98,7 +81,9 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
             crossorigin="anonymous"></script>
