finish get userstories

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
                         <div class="user-avatar"> </div>
                     </div>
                     <h5 id="username" class=" mt-3">USER NAME</h5>
-                    <p class="bio mt-2">user bio</p>
+                    <p id="bio" class="bio mt-2">user bio</p>
 
                     <a href="/profile" class="show-profile">View Full Profile</a>
                 </div>
@@ -69,145 +69,10 @@
 
                     <!-- personal wall -->
                     <div class="tab-pane fade show active p-4" id="wall" role="tabpanel">
-                        <div class="card p-4 mb-4">
-                            <p class="mb-3">
-                                <strong>username</strong>
-                                <span class="pl-3">22/2/2020 08:20 pm</span>
-                            </p>
-                            <p class="lead mb-3">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                Ipsum has been the industry's standard dummy text ever since the 1500s
-                            </p>
-
-                            <div class="row justify-content-center mb-3">
-                                <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img id="post1" class="img-post" src="/images/post1.jpg">
-                                </div>
-
-                                <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img id="post2" class="img-post" src="/images/post2.jpg">
-                                </div>
-
-
-                                <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img id="post3" class="img-post" src="/images/post3.jpg">
-                                </div>
-                            </div>
-
-                            <div class="row justify-content-between">
-                                <div class="col-2">
-                                    <i class="fas fa-trash"></i>
-                                </div>
-
-                                <div class="col-6">
-                                    <button id="button1" class="fas fa-heart text-danger"></button>
-                                    <i id="socketEvent1">10</i>
-                                    <i class="far fa-grin-squint text-warning"></i> (15)
-                                    <i class="far fa-sad-tear text-warning"></i> (12)
-
-                                    <i class="far fa-angry text-warning"></i> (11)
-
-                                </div>
-                            </div>
-
-                        </div>
-
-
-                        <div class="card p-4 mb-4">
-                            <p class="mb-3">
-                                <strong>username</strong>
-                                <span class="pl-3">22/2/2020 08:20 pm</span>
-                            </p>
-
-                            <p class="lead mb-3">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                Ipsum has been the industry's standard dummy text ever since the 1500s
-                            </p>
-
-                            <div class="row justify-content-center mb-3">
-                                <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="/images/post1.jpg">
-                                </div>
-
-                                <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="/images/post2.jpg">
-                                </div>
-
-
-                                <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="/images/post3.jpg">
-                                </div>
-                            </div>
-
-                            <div class="row justify-content-between">
-                                <div class="col-2">
-                                    <i class="fas fa-trash"></i>
-                                </div>
-
-                                <div class="col-6">
-                                    <i class="fas fa-heart text-danger"></i> (10)
-                                    <i class="far fa-grin-squint text-warning"></i> (15)
-                                    <i class="far fa-sad-tear text-warning"></i> (12)
-
-                                    <i class="far fa-angry text-warning"></i> (11)
-
-                                </div>
-                            </div>
-
-                        </div>
-
-
-                        <div class="card p-4 mb-4">
-                            <p class="mb-3">
-                                <strong>username</strong>
-                                <span class="pl-3">22/2/2020 08:20 pm</span>
-                            </p>
-
-                            <p class="lead mb-3">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                Ipsum has been the industry's standard dummy text ever since the 1500s
-                            </p>
-
-                            <div class="row justify-content-center mb-3">
-                                <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/post1.jpg">
-                                </div>
-
-                                <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/post2.jpg">
-                                </div>
-
-
-                                <div class="col-sm-12 col-md-4 center mb-2">
-                                    <img class="img-post" src="./assets/post3.jpg">
-                                </div>
-                            </div>
-
-                            <div class="row justify-content-between">
-                                <div class="col-2">
-                                    <i class="fas fa-trash"></i>
-                                </div>
-
-                                <div class="col-6">
-                                    <i class="fas fa-heart text-danger"></i> (10)
-                                    <i class="far fa-grin-squint text-warning"></i> (15)
-                                    <i class="far fa-sad-tear text-warning"></i> (12)
-
-                                    <i class="far fa-angry text-warning"></i> (11)
-
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="mt-3">
-                            <button class="btn " data-toggle="modal" data-target="#exampleModal">
-                                <i class="fas fa-plus-circle" style="color: #1d2124;"></i>
-                                add new story
-                            </button>
-                        </div>
-
                     </div>
+
+
+
 
                     <!-- stories -->
 
