--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/javascripts/initHome.js"></script>
     <script src="/javascripts/upload_story.js"></script>
+    <script src="/javascripts/update_rating.js"></script>
     <title>Home</title>
 </head>
 
