--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,10 @@
 
     <!--font-aweseme-->
     <link href="/stylesheets/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
-      <script src="/javascripts/login.js"></script>
+    <script src="/javascripts/login.js"></script>
+    <script src="/javascripts/idb.js"></script>
+    <script src="/javascripts/database.js"></script>
+    <script src="/javascripts/app.js"></script>
     <title>Login</title>
   </head>
   <body>
