--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,9 +17,12 @@
     <link href="/stylesheets/fontawesome-free-5.12.1-web/css/all.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/javascripts/initHome.js"></script>
     <script src="/javascripts/upload_story.js"></script>
     <script src="/javascripts/update_rating.js"></script>
+    <script src="/javascripts/idb.js"></script>
+    <script src="/javascripts/database.js"></script>
+    <script src="/javascripts/app.js"></script>
+    <script src="/javascripts/initHome.js"></script>
     <title>Home</title>
 </head>
 
