Revert "Add the Euclidean algorithm based on the file structure"
This reverts commit 893e933129f0e5c91b871a080d7629c20224eb63.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -77,8 +77,8 @@
                             </p>
 
                             <p class="lead mb-3">
-                                 <form id=“ranking_Form" onsubmit="onRankingSubmit('/ranking')">
-                                    <label for='Name'>Name:</label>
+                                <form id=“ranking_Form" onsubmit="onRankingSubmit('/ranking')">
+                                    <label for='Name'>your username:</label>
                                     <input type="text" name="ranking_name" id="ranking_name" value="">
                                     <input type="submit" name="ranking_submit" value="Submit" id="ranking_submit">
                                 </form>
