--- a/views/home.ejs
+++ b/views/home.ejs
@@ -66,6 +66,9 @@
                                href="#">Stories Wall</a>
                         </nav>
                     </div>
+                    <div class="center">
+                    <div class="offline_div" id="offline_div" style="display: none">You are offline!</div>
+                    </div>
                 </div>
 
 
