--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -141,7 +141,10 @@ nav a {
   width: 9rem;
   height: 11rem;
 }
-
+.offline_div{
+  font-size: 1rem;
+  color: white !important;
+}
 
 
 /******** UPLOAD *************/
