--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -55,7 +55,7 @@
                         </div>
 
                         <p class="mt-4">
-                            Already have an account ? <a href="./index">Login</a>
+                            Already have an account ? <a href="/">Login</a>
                         </p>
 
                     </form>
