--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
                                     <i class="fas fa-lock"></i>
                                   </span>
                 </div>
-                <input type="text" name="password" placeholder="password" class="form-control">
+                <input type="password" name="password" placeholder="password" class="form-control">
 
               </div>
 
